...
            }
        }

        if (showLightColorBar) {
            Spacer(modifier = Modifier.height(ToolkitTheme.spacing.medium))
            ColorSlideBar(
                modifier = Modifier.testTag("ring_lightness_bar"),
                value = lightness,
                onValueChange = { l ->
                    lightness = l
                    val (newColor, _) = ColorPickerHelper.calculateRingColor(
                        x = pickerLocation.x,
                        y = pickerLocation.y,
...
            )
        }

        if (showDarkColorBar) {
            Spacer(modifier = Modifier.height(ToolkitTheme.spacing.medium))
            ColorSlideBar(
                modifier = Modifier.testTag("ring_darkness_bar"),
                value = darkness,
                onValueChange = { d ->
                    darkness = d
                    val (newColor, _) = ColorPickerHelper.calculateRingColor(
                        x = pickerLocation.x,
                        y = pickerLocation.y,
...
            )
        }

        if (showAlphaBar) {
            Spacer(modifier = Modifier.height(ToolkitTheme.spacing.medium))
            ColorSlideBar(
                modifier = Modifier.testTag("ring_alpha_bar"),
                value = alpha,
                onValueChange = { a ->
                    alpha = a
                    val newColor = internalColor.copy(alpha = a)
                    internalColor = newColor
                    onPickedColor(newColor)
...
