...
            }
        }

        if (showBrightnessBar) {
            Spacer(modifier = Modifier.height(ToolkitTheme.spacing.medium))
            ColorSlideBar(
                modifier = Modifier.testTag("circle_brightness_bar"),
                value = brightness,
                onValueChange = { b ->
                    brightness = b
                    val hsv = ColorPickerHelper.colorToHsv(internalColor)
                    val newValue = if (lightCenter) 1f - b else b
                    val newColor = ColorPickerHelper.hsvToColor(hsv.copy(value = newValue, alpha = alpha))
...
            )
        }

        if (showAlphaBar) {
            Spacer(modifier = Modifier.height(ToolkitTheme.spacing.medium))
            ColorSlideBar(
                modifier = Modifier.testTag("circle_alpha_bar"),
                value = alpha,
                onValueChange = { a ->
                    alpha = a
                    val newColor = internalColor.copy(alpha = a)
                    internalColor = newColor
                    onPickedColor(newColor)
...
